[metadata]
name = relief_planning
version = attr: relief_planning.__version__
author = Mip Wise
author_email = contact@mipwise.com
description = Template package for building analytics solutions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mipwise/relief-planning
project_urls =
    Bug Tracker = https://github.com/mipwise/relief-planning/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = relief_planning
install_requires =
    ticdat>=0.2.22
    pandas>=1.4.3
python_requires = >=3.8
